Fixed menu display on Safari

--- a/links/main.css
+++ b/links/main.css
@@ -18,9 +18,9 @@ small { font-size: 80%; }
 #zyklus { position: relative; width: 100%; max-width: 500px; min-height: 95vh; margin: 0 auto; overflow: hidden; background: var(--background);}
 #zyklus #content { padding-left: 10px; padding-right: 10px; }
 #zyklus #menu { display: flex; justify-content: space-evenly; margin: var(--margin); margin-top: 0; }
-#zyklus #menu #item { display: grid; margin-right: 8px;}
+#zyklus #menu #item { margin-right: 8px;}
 #zyklus #menu #item:last-child { margin: 0;}
-#zyklus #menu #item svg { background-color: var(--b_low); fill: var(--f_med); stroke: var(--f_med); }
+#zyklus #menu #item svg { display: block; width: 100%; background-color: var(--b_low); fill: var(--f_med); stroke: var(--f_med); }
 #zyklus #menu #item svg:hover { background-color: var(--f_low); fill: var(--b_high); stroke: var(--b_high); }
 #zyklus #menu #item svg.selected { background-color: var(--f_med); fill: var(--b_low); stroke: var(--b_low); }
 #zyklus figure { margin-bottom: var(--margin); }
